--- a/demos/star-trek/.budgie/budgie.config.json
+++ b/demos/star-trek/.budgie/budgie.config.json
@@ -1,7 +1,7 @@
 {
   "model": "ai/qwen2.5:latest",
-  "embedding-model": "hf.co/second-state/all-minilm-l6-v2-embedding-gguf:q4_k_m",
-  "cosine-limit": 0.5,
+  "embedding-model": "ai/mxbai-embed-large:latest",
+  "cosine-limit": 0.4,
   "temperature": 0.8,
   "baseURL": "http://localhost:12434/engines/llama.cpp/v1"
 }
